<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="menu_view">See details</string>
    <string name="menu_delete">Delete this record</string>
    <string name="app_name">Harassment interception</string>
    <string name="action_settings">Setting</string>
    <string name="contact">Add from Contacts</string>
    <string name="phone">Add from call log</string>
    <string name="sms">Add from SMS list</string>
    <string name="manually">Manula add</string>
    <string name="intercept_phone">Intercept calls</string>
    <string name="intercept_sms">Intercept SMS</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Select none</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="black">Blacklist</string>
    <string name="name_hint">Fill in remarks</string>
    <string name="number_hint">Enter or paste number</string>
    <string name="reject_notification">Post-interception message notification appears</string>
    <string name="black_settings_title">Blacklist settings</string>
    <string name="no_intercept">No interception record</string>
    <string name="call_back">Call back</string>
    <string name="sms_back">SMS back</string>
    <string name="no_reject">Cancel interception</string>
    <string name="release_reject">No more interception</string>
    <string name="marks_manage">Markers management</string>
    <string name="no_mark">No marker</string>
    <string name="edit">Edit</string>
    <string name="del">Delete</string>
    <string name="del_mark">Delete marker</string>
    <string name="is_confirm_del">Corresponding number marker will be canceled, whether to delete this marker?</string>
    <string name="add_mark">Add new marker</string>
    <string name="edit_mark">Modify marker</string>
    <string name="black_remove">Remove from the blacklist</string>
    <string name="confirm_remove">Sure to remove this number from the blacklist?</string>
    <string name="confirm_removes">Sure to remove the selected number from the blacklist?</string>
    <string name="recover_black_phone">Simultaneously restore call log and message</string>
    <string name="black_number_exist">he blacklist number you add already exists!</string>
    <string name="mark_content_exist">The marker you add already exists !</string>
    <string name="no_number"> Please enter number</string>
    <string name="no_marks"> Please enter marker</string>
    <string name="no_content">Please fill in !</string>
    <string name="no_sub">No subject</string>
    <string name="mars">From Mars</string>
    <string name="format">Wrong number format</string>
    <string name="item">&#160;</string>
    <string name="no_calllog">No call log</string>
    <string name="sys_auth_dlg_text">"• Read contacts\n• read information\n• read call log"</string>
    <string name="sys_auth_dlg_no_more_prompt">"Not prompt"</string>
    <string name="del_confirm">"Delete"</string>
    <string name="remove_confirm">"Remove out"</string>
    <string name="remove_one_dial_bn">"Delete this call interception record ?"</string>
    <string name="remove_dial_confirm">"Delete"</string>
    <string name="selected_total_num">Selected <xliff:g id="total">%d</xliff:g> items</string>
    <string name="tab_phone_reject_title">"Call interception"</string>
    <string name="tab_sms_reject_title">"SMS interception"</string>
    <string name="settings_sms_reject_title">"SMS interception"</string>
    <string name="settings_call_reject_title">"Call interception"</string>
    <string name="black_list_empty">"No blacklist available"</string>
    <string name="new_mark">Markers newly added</string>
    <string name="up_mark">The markers will be uploaded to help others identify the number</string>
    <string name="add_to_black_over">Already added in the blacklist</string>
    <string name="add_black_title">Harassment interception</string>
    <string name="add_black_content">“Click to add <xliff:g id="BLACK_NAME">%s</xliff:g> to blacklist”</string>
    <string name="hangup_black_many_content_phone">There are <xliff:g id="BLACK_TIMES">%s</xliff:g> new call interception record(s), click to view</string>
    <string name="hangup_black_many_content_sms">There are <xliff:g id="BLACK_TIMES">%s</xliff:g> new message interception record(s), click to view</string>
    <string name="delete_reject">"Delete record"</string>
    <string name="delete_sms_reject_dialg_msg">"Sure to delete this SMS interception record?"</string>
    <string name="delete_calllog_reject_dialg_msg">"Sure to delete this call interception record?"</string>
    <string name="multi_delete_calllog_reject_dialg_msg">"Sure to delete the selected call interception record?"</string>
    <string name="multi_delete_sms_reject_dialg_msg">"Sure to delete the selected SMS interception record?"</string>
    <string name="multi_recover_sms_reject_dialg_msg">"Sure to restore the selected interception record to SMS inbox?"</string>
    <string name="recover_sms_dlg_title">"Restore SMS"</string>
    <string name="no_reject_success_toast">Cancel interception successful</string>
    <string name="delete_record_success_toast">Record deletion successful</string>
    <string name="recover_record_success_toast">Record recovery successful</string>
    <string name="exist_number">Already exists</string>
    <string name="hb_select_calllogs">Select call log</string>
    <string name="mark_error">Abnormal name format</string>
    <string name="white_list">Whitelist</string>
    <string name="cn_iso">+86</string>
    <string name="empty_list">0</string>
    <string name="confirm_no_reject">No longer intercept this number ?</string>
    <string name="save_title">"Saving"</string>
    <string name="dels">Deleting...</string>
    <string name="recovery">Restoring...</string>
    <string name="removing">Removing...</string>
    <string name="smart_reject_title">"Intelligent interception"</string>
    <string name="sms_cloud_reject_title">"Cloud interception"</string>
    <string name="sms_cloud_reject_summary">"Intelligent interception of SMS spam"</string>
    <string name="sms_keyword_reject_title">"Keyword interception"</string>
    <string name="call_reject_summary">"Intercept blacklist numbers"</string>
    <string name="call_smart_reject_title">"Automatic interception of unwanted calls"</string>
    <string name="call_smart_reject_summary">"Automatic interception of unwanted calls tagged by majority"</string>
    <string name="white_remove">Remove from whitelist</string>
    <string name="add_to_white_over">Already added to the whitelist</string>
    <string name="white_list_empty">"No whitelist available"</string>
    <string name="white_setting_title">Whitelist settings</string>
    <string name="black_setting_summary">Blacklist\'s SMSs and calls will all intercepted</string>
    <string name="white_setting_summary">Whitelist\'s SMSs and calls all safe</string>
    <string name="manaully_add_title">Enter number manually</string>
    <string name="sms_note">SMS</string>
    <string name="calllog_note">Call log</string>
    <string name="recove_reject_calls_title">Sure to restore call log?</string>
    <string name="recove_reject_calls_message">Restore call log</string>
    <string name="black_call_listitem_title">Blacklist number</string>
    <string name="mark_by_user">Already marked</string>
    <string name="mark_count"><xliff:g id="COUNT">%s</xliff:g> people marked</string>
    <string name="rejected_message">Already intercepted</string>
    <string name="rejected_count_message">Already intercepted <xliff:g id="COUNT">%s</xliff:g> Times</string>
    <string name="add_keyword">Add new keyword</string>
    <string name="edit_keyword">Modify keyword</string>
    <string name="no_keyword">Please enter keyword</string>
    <string name="keywords_manage">Keyword interception</string>
    <string name="keyword_content_exist">The keyword you add already exists !</string>
    <string name="del_keyword">Delete the keyword</string>
    <string name="is_confirm_keyword_del">Sure to delete this keyword?</string>
    <string name="sms_keyword_reject_list_title">"Keyword list"</string>
    <string name="add_menu_title">Add</string>
    <string name="date_just_now">"Just now"</string>
    <string name="date_the_day_before">"The day before yesterday"</string>
    <string name="date_yesterday">"Yesterday"</string>
    <string name="mark_name_ad">Advertising promotion</string>
    <string name="mark_name_house">Real estate agent</string>
    <string name="mark_name_swindle">Telephone scam</string>
    <string name="mark_name_express">Express meal delivery</string>
    <string name="mark_name_taxi">Taxi</string>
    <string name="mark_name_other">Customize</string>
    <string name="mark_name_other_dialog">Customize mark</string>
    <string name="mark_name_success_toast">Mark successful</string>
    <string name="max_chars">Reach word limit</string>
    <string name="remove_mark">Unmark</string>
    <string name="recover_log_check">This number no longer intercepted</string>
    <string name="sms_black_reject_title">"Blacklist interception"</string>
    <string name="sms_black_reject_summary">"Intercept blacklist numbers"</string>
    <string name="mms_reject">"MMS, please revert to inbox to check later!"</string>
    <string name="recover_sms_to_box">"Restored to the Inbox"</string>
    <string name="recover_calllog_to_box">"Restored to call log"</string>
    <string name="max_add_to_blacklist">The selected call log can not be more than 1000"</string>
</resources>