<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceScreen
        android:defaultValue="true"
        android:key="sms"
        android:title="@string/settings_sms_reject_title" >
        <intent android:action="com.hb.reject.smssetting" />
    </PreferenceScreen>

    <PreferenceScreen
        android:defaultValue="true"
        android:key="call"
        android:title="@string/settings_call_reject_title" >
        <intent android:action="com.hb.reject.callsetting" />
    </PreferenceScreen>

    <com.hb.interception.settings.CountAndNarrowPreference
        android:key="black_list"
        android:summary="@string/black_setting_summary"
        android:title="@string/black_settings_title"
        android:widgetLayout="@layout/count_narrow_preference_view" />

    <com.hb.interception.settings.CountAndNarrowPreference
        android:key="white_list"
        android:summary="@string/white_setting_summary"
        android:title="@string/white_setting_title"
        android:widgetLayout="@layout/count_narrow_preference_view" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="notification"
        android:summary=""
        android:title="@string/reject_notification" />

</PreferenceScreen>