<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="53dp"
    android:paddingStart="52dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="50dp"
            android:layout_height="36dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/textview_border"  
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/cn_iso"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="#FFEFEFEF"
            android:digits="1234567890+- "
            android:ems="10"
            android:paddingStart="5dp"
            android:gravity="center_vertical"
            android:hint="@string/number_hint"
            android:inputType="phone"
            android:singleLine="true"
            android:textSize="16sp" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginTop="6dp"
        android:paddingStart="5dp"
        android:background="#FFEFEFEF"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/name_hint"
        android:singleLine="true"
        android:textSize="14sp" />

</LinearLayout>